# zeitpeer

./: README.md
src/: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
src/config/: ntp_public.toml  peer1.toml  peer2.toml
src/grafana/provisioning/: dashboards.yml
src/grafana/provisioning/dashboards/: zeitpeer_ntp_offsets.json
src/grafana/provisioning/datasources/: prometheus.yml
src/localntpserver/: README.md  chrony.conf
src/prometheus/: prometheus.yml
src/ptpntpserver/: README.md  chrony.conf
src/publicntpserver/: Dockerfile  README.md  chrony.conf
src/src/: config.rs  main.rs
src/src/net/: mod.rs  node.rs  ntp.rs  proto.rs
src/src/phc/: reader.rs
src/src/store/: redis.rs
src/src/telemetry/: metrics.rs
src/src/time/: calc.rs  drift.rs  fuse.rs  mod.rs  slew.rs
src/src/util/: mod.rs
