[package]
name = "zeitpeer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.7"
bincode = "1"
libc = "0.2"
redis = { version = "0.25", features = ["tokio-comp"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "process"] }
tracing = "0.1"
tracing-subscriber = "0.3"
nix = { version = "0.29", features = ["time"] }
toml = "0.8"
once_cell = "1"
